test/runnable/extra-files/lib15729.d
struct S
{
    uint val;
}

void test1()
{
    S s;
    s.val = 4321;
}

void test2()
{
    S s;
    s.val = 1234;
}
