test/fail_compilation/fail91.d
struct S;

void main()
{
	S* s = new S();
}

